Bug 1472887, focusin/out should be composed, and mark chrome event target chain items as chrome, r=masayuki